[gd_scene load_steps=34 format=3 uid="uid://cidva77gd3bbc"]

[ext_resource type="Script" path="res://Scenes/Npc/Merchant/Merchant.gd" id="1_8mkry"]
[ext_resource type="Texture2D" uid="uid://cs4jpvs4s2flw" path="res://Art/NPC/Merchant/Interact/Merchant Interact-Sheet.png" id="2_g3xt0"]
[ext_resource type="Texture2D" uid="uid://dagws484per3p" path="res://Art/NPC/Merchant/Movement/Merchant Movement-Sheet.png" id="3_raaum"]
[ext_resource type="Texture2D" uid="uid://cgkovm7pepx6m" path="res://Art/NPC/Merchant/Idle/Merchant Idle.png" id="4_d5tpu"]
[ext_resource type="Texture2D" uid="uid://bfchbl8thvulv" path="res://Art/Inventory/pixil-frame-0 (9).png" id="5_05p64"]
[ext_resource type="Texture2D" uid="uid://der7v037nls2s" path="res://Art/UI/E.png" id="6_56dhj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6q6v1"]
atlas = ExtResource("2_g3xt0")
region = Rect2(0, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_55spi"]
atlas = ExtResource("2_g3xt0")
region = Rect2(448, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnyan"]
atlas = ExtResource("2_g3xt0")
region = Rect2(896, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dn5p"]
atlas = ExtResource("2_g3xt0")
region = Rect2(1344, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_poa01"]
atlas = ExtResource("2_g3xt0")
region = Rect2(1792, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_llmik"]
atlas = ExtResource("2_g3xt0")
region = Rect2(2240, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdcsr"]
atlas = ExtResource("2_g3xt0")
region = Rect2(2688, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3cw5"]
atlas = ExtResource("2_g3xt0")
region = Rect2(3136, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_btu2m"]
atlas = ExtResource("2_g3xt0")
region = Rect2(3584, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkbql"]
atlas = ExtResource("2_g3xt0")
region = Rect2(4032, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_7l2db"]
atlas = ExtResource("2_g3xt0")
region = Rect2(4480, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_anaq6"]
atlas = ExtResource("2_g3xt0")
region = Rect2(4928, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8pq7"]
atlas = ExtResource("2_g3xt0")
region = Rect2(5376, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ltbr"]
atlas = ExtResource("2_g3xt0")
region = Rect2(5824, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtibp"]
atlas = ExtResource("3_raaum")
region = Rect2(0, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_q40hm"]
atlas = ExtResource("3_raaum")
region = Rect2(448, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdewf"]
atlas = ExtResource("3_raaum")
region = Rect2(896, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj0cf"]
atlas = ExtResource("3_raaum")
region = Rect2(1344, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_frc8q"]
atlas = ExtResource("3_raaum")
region = Rect2(1792, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1nas"]
atlas = ExtResource("3_raaum")
region = Rect2(2240, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnhs6"]
atlas = ExtResource("3_raaum")
region = Rect2(2688, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2fny"]
atlas = ExtResource("3_raaum")
region = Rect2(3136, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_aongu"]
atlas = ExtResource("3_raaum")
region = Rect2(3584, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_n46mo"]
atlas = ExtResource("4_d5tpu")
region = Rect2(0, 0, 448, 448)

[sub_resource type="SpriteFrames" id="SpriteFrames_cer8m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6q6v1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55spi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnyan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dn5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_poa01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llmik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdcsr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3cw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btu2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkbql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7l2db")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_anaq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8pq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ltbr")
}],
"loop": false,
"name": &"Mechant_Iteract",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtibp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q40hm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdewf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj0cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frc8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1nas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnhs6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2fny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aongu")
}],
"loop": false,
"name": &"Mechant_Move",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n46mo")
}],
"loop": false,
"name": &"Mechant_idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_omd7v"]
radius = 24.0416

[sub_resource type="CircleShape2D" id="CircleShape2D_1noru"]
radius = 85.2115

[node name="Merchant_NPC" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1_8mkry")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(-9.53674e-07, 2)
scale = Vector2(0.18, 0.18)
sprite_frames = SubResource("SpriteFrames_cer8m")
animation = &"Mechant_Iteract"
frame = 13
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
shape = SubResource("CircleShape2D_omd7v")
debug_color = Color(1, 1, 1, 0.42)

[node name="Interact_Area" type="Area2D" parent="."]
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interact_Area"]
z_index = 1
shape = SubResource("CircleShape2D_1noru")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -27.0
offset_top = 1.0
offset_right = 13.0
offset_bottom = 41.0

[node name="NinePatchRect" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = -54.0
offset_top = -95.0
offset_right = 96.0
offset_bottom = -55.0
scale = Vector2(1.12, 1)
texture = ExtResource("5_05p64")

[node name="Label" type="Label" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_left = -29.0
offset_top = -89.0
offset_right = 39.0
offset_bottom = -66.0
theme_override_colors/font_color = Color(0.631682, 0.408503, 9.62615e-08, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Talk to Merchant"

[node name="Sprite2D" type="Sprite2D" parent="Control"]
z_index = 1
position = Vector2(-39, -76)
texture = ExtResource("6_56dhj")

[connection signal="body_entered" from="Interact_Area" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Interact_Area" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
